--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_module --respawn src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,13 +14,19 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
+    "@types/uuid": "^9.0.1",
     "prisma": "4.15.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
     "@prisma/client": "4.15.0",
+    "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1390.0",
     "bcrypt": "^5.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "uuid": "^9.0.0"
   }
 }
