--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,8 @@
     "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1390.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
