--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.2.5",
     "@types/uuid": "^9.0.1",
     "prisma": "4.15.0",
@@ -21,10 +24,9 @@
   },
   "dependencies": {
     "@prisma/client": "4.15.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1390.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "express": "^4.18.2",
